--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,5 +10,5 @@
 @import "card_for_cookbook";
 @import "card_for_recipe";
 @import "additional_swiper_styling";
-@import "_card_for_meals.scss";
+@import "card_for_meals";
 @import "menu";
