--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,7 +2,8 @@
   width: 100vw;
   background-color: transparent;
   margin: 0 auto;
-  padding:0;
+  padding:5px 0;
+  border-radius: 25px;
 
   box-shadow: 4px 10px 10px 10px rgba(0,0,0,0.07);
 }
@@ -16,7 +17,7 @@
   li {
     text-decoration: none;
     display: inline;
-    width: 20%;
+    width: 25%;
     font-size: 8px;
     text-align: center;
     padding-bottom: 10px;
@@ -32,10 +33,10 @@
 }
 
 .footer-active {
-  background-color: #0F6A50;
+  color: #FA4A0C;
   font-weight: bold;
   > a {
-    color: white!important;
+    color: #FA4A0C!important;
   }
 }
 
