--- a/app/views/pages/swipe.html.erb
+++ b/app/views/pages/swipe.html.erb
@@ -20,3 +20,17 @@
     <!-- If we need scrollbar -->
     <!-- <div class="swiper-scrollbar"></div> -->
 </div>
+
+<div class="card-externe">
+  <div class="card-repas">
+    <%= image_tag "https://i.ytimg.com/vi/8q_llEwSdp0/maxresdefault.jpg", alt: "alttext" %>
+  </div>
+  <div class="card-repas-description">
+    <div class="card-description-h1">
+      <h3>Salade vegetarienne</h3>
+    </div>
+    <div class="card-description-p">
+      <p>Dejeuner</p>
+    </div>
+  </div>
+</div>
