--- a/app/assets/stylesheets/components/_card-celia.scss
+++ b/app/assets/stylesheets/components/_card-celia.scss
@@ -16,8 +16,10 @@
   bottom: 45%;
   left: 25px;
   > img {
+    object-fit: cover;
     width: 100%;
     height: 100%;
+    margin: 0 auto;
     border-radius: 15px;
   }
 }
