modify new UI of recipe show and change the font

--- a/app/assets/stylesheets/components/_additional_swiper_styling.scss
+++ b/app/assets/stylesheets/components/_additional_swiper_styling.scss
@@ -1,5 +1,8 @@
 .swiper-container {
     width: 90vw;
-    height: 300px;
+    height: auto;
 }
 
+.swiper-pagination-bullet-active {
+  background-color: #FA4A0C;
+}
