--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,13 +1,14 @@
 // Import Google fonts
 // @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@400;600&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 // Define fonts for body and headers
 // $body-font: "Work Sans", "Helvetica", "sans-serif";
 // $headers-font: "Nunito", "Helvetica", "sans-serif";
 
-$body-font: "Raleway", sans-serif;
-$headers-font: "Playfair Display", serif;
+$body-font: "Poppins", sans-serif;
+$headers-font: "Poppins", sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
