--- a/app/assets/stylesheets/components/_additional_swiper_styling.scss
+++ b/app/assets/stylesheets/components/_additional_swiper_styling.scss
@@ -1,5 +1,42 @@
 .swiper-container {
-    width: 90vw;
-    height: 300px;
+  height: 60%;
 }
+
+.swiper-slide .card-externe {
+  height: 300px;
+  margin: 0 auto;
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  width: 80%;
+}
+
+.myownswiper-slides {
+  display: grid;
+  grid-auto-flow: column;
+  // grid-template-columns: repeat(3, 1fr);
+  grid-gap: 3em;
+  align-content: center;
+  height: 100%;
+  padding: 45px 0px 45px 25px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  overscroll-behavior-x: contain;
+}
+
+.myownswiper {
+  overflow: hidden;
+}
+
+.myownswiper-slides .card-externe:first-child {
+  margin-left: 5px;
+}
+
+.myownswiper-slides .card-externe:last-child {
+  margin-right: 30px;
+}
+
+
 
