--- a/app/views/pages/swipe.html.erb
+++ b/app/views/pages/swipe.html.erb
@@ -1,26 +1,25 @@
 <h1>Welcome to Swiper</h1>
 
 <!-- Slider main container -->
-<div class="swiper-container">
+<!-- <div class="swiper-container"> -->
     <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
+    <!-- <div class="swiper-wrapper"> -->
         <!-- Slides -->
-        <div class="swiper-slide">Slide 1</div>
+ <!--        <div class="swiper-slide">Slide 1</div>
         <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
-        ...
-    </div>
+        <div class="swiper-slide">Slide 3</div> -->
+ <!--    </div> -->
     <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
+<!--     <div class="swiper-pagination"></div> -->
 
     <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+<!--     <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div> -->
 
     <!-- If we need scrollbar -->
     <!-- <div class="swiper-scrollbar"></div> -->
-</div>
-
+<!-- </div>
+ -->
 <div class="card-externe">
   <div class="card-repas">
     <%= image_tag "https://i.ytimg.com/vi/8q_llEwSdp0/maxresdefault.jpg", alt: "alttext" %>
@@ -34,3 +33,53 @@
     </div>
   </div>
 </div>
+
+
+<div class="myownswiper">
+  <div class="myownswiper-slides">
+
+    <div class="card-externe">
+      <div class="card-repas">
+        <%= image_tag "https://i.ytimg.com/vi/8q_llEwSdp0/maxresdefault.jpg", alt: "alttext" %>
+      </div>
+      <div class="card-repas-description">
+        <div class="card-description-h1">
+          <h3>Salade vegetarienne</h3>
+        </div>
+        <div class="card-description-p">
+          <p>Dejeuner</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-externe">
+      <div class="card-repas">
+        <%= image_tag "https://i.ytimg.com/vi/8q_llEwSdp0/maxresdefault.jpg", alt: "alttext" %>
+      </div>
+      <div class="card-repas-description">
+        <div class="card-description-h1">
+          <h3>Salade vegetarienne</h3>
+        </div>
+        <div class="card-description-p">
+          <p>Dejeuner</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-externe">
+      <div class="card-repas">
+        <%= image_tag "https://i.ytimg.com/vi/8q_llEwSdp0/maxresdefault.jpg", alt: "alttext" %>
+      </div>
+      <div class="card-repas-description">
+        <div class="card-description-h1">
+          <h3>Salade vegetarienne</h3>
+        </div>
+        <div class="card-description-p">
+          <p>Dejeuner</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+    <!-- If we need scrollbar -->
+    <!-- <div class="swiper-scrollbar"></div> -->
