--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <% if user_signed_in? %>
-          <%= image_tag "https://i.pinimg.com/originals/9f/2a/63/9f2a63d7fcf4f314800dd3f4f40c4a67.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://p7.hiclipart.com/preview/402/481/317/hamburger-button-drop-down-list-computer-icons-navigation-bars-and-page-menu-templates.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdown">
             <%= link_to "Check my profile", "/user", class: "dropdown-item" %>
             <%= link_to "Edit my profile", "/users/edit", class: "dropdown-item" %>
