--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "swiper/swiper-bundle";
 @import "flatpickr/dist/flatpickr";
 @import "flatpickr/dist/themes/material_green";
+@import "swiper/swiper-bundle";
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
