--- a/app/assets/stylesheets/components/_htmlbody.scss
+++ b/app/assets/stylesheets/components/_htmlbody.scss
@@ -17,6 +17,7 @@ html, body {
   margin: 0;
   padding: 0;
   padding-bottom: 40px;
+  background-color: #F2F2F2;
 }
 a:hover {
   text-decoration: none!important;
