--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,10 @@
 .footer {
   width: 100vw;
-  background-color: transparent;
+  background-color: #F2F2F2;
   margin: 0 auto;
   padding:5px 0;
   border-radius: 25px;
-
-  box-shadow: 4px 10px 10px 10px rgba(0,0,0,0.07);
+  box-shadow: 2px 0px 8px rgba(0,0,0,0.07);
 }
 .footer-list {
   list-style: none;
