--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -68,7 +68,7 @@
   <!-- <div class="swiper-scrollbar"></div> -->
 </div>
 
-<div class="container-fluid">
+<div class="containerrecipeshow">
 
   <h1> <%= @recipe.name %> </h1>
   <h2 class="h2-moment"> <%= @meals.moment.capitalize %>  </h2>
