--- a/app/assets/stylesheets/components/_htmlbody.scss
+++ b/app/assets/stylesheets/components/_htmlbody.scss
@@ -10,6 +10,7 @@ html, body {
   display: flex;
   height: 100vh;
   overflow: hidden;
+  background-color: #F2F2F2;
 }
 
 .container-main {
@@ -29,7 +30,7 @@ a:active{
 }
 
 h1 {
-  font-size:22px;
+  font-size:34px;
   text-align: center;
   margin: 0 auto;
   font-style: normal;
@@ -39,18 +40,18 @@ h1 {
 }
 
  h2 {
-  font-size: 18px;
+  font-size: 26px;
   margin: 0 auto 0.25em auto;
 
  }
 
  h3, h4, h5 {
-  font-size:16px;
+  font-size:20px;
   margin: 0 auto 0.5em auto;
  }
 
  p {
-  font-size:15px;
+  font-size:16px;
   // font-weight: 600;
   letter-spacing: 0.02em;
  }
