created the front for the grocery list as well as a way to update the status of bought to the database of the grocery-item + a test in the swipe page

--- a/app/views/grocery_list/show.html.erb
+++ b/app/views/grocery_list/show.html.erb
@@ -1,11 +1,16 @@
-<h1>Ma liste de courses:</h1>
-
-<% @grocery_items.each do |grocery_item| %>
-  <div class="grocery-item-list">
-    <%= form_for grocery_item do |f, index| %>
-        <p><%= f.check_box :bought %> <span class= "index"><strong><%= grocery_item.ingredient.name %>:</strong> <%= grocery_item.total_quantity %> <%= grocery_item.unit %></span></p>
-    <% end %>
+<div class="grocery-list">
+  <h1 style="text-decoration: underline!important;">Ma liste de courses:</h1>
+  <div class="align-p">
+    <p>Marquez comme lu les ingrédients achetés en cliquant dessus.</p>
   </div>
-<% end %>
-
-
+  <ul id="myUL">
+    <% @grocery_list.grocery_items.each do |item| %>
+      <%= link_to grocery_item_path(item), method: :put do %>
+        <div class="checklist-alignment">
+          <div class="checklist"><li class="<%= 'checked' if item.bought == true %>"> <%= item.ingredient.name %> </li></div>
+          <div class="checklist-separator"></div>
+        </div>
+      <% end %>
+    <% end %>
+  </ul>
+</div>
