--- a/app/views/pages/swipe.html.erb
+++ b/app/views/pages/swipe.html.erb
@@ -1,3 +1,23 @@
+<body>
+
+<div id="myDIV" class="header">
+  <h2 style="margin:5px">Ma liste de course</h2>
+  <input type="text" id="myInput" placeholder="Ingrédient...">
+  <span onclick="newElement()" class="addBtn">Ajouter</span>
+</div>
+
+<ul id="myUL">
+  <li>500g de carrottes</li>
+  <li class="checked">3 oeufs</li>
+  <li>200g de beurre</li>
+  <li>1000g de pomme de terre</li>
+</ul>
+
+</body>
+
+<!-- ------------------------------------------------------- -->
+<hr>
+
 <h1>Welcome to Swiper</h1>
 
 <!-- Slider main container -->
