--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,36 +7,7 @@
 }
 
 .background-home {
-  background-image: url(https://i.pinimg.com/originals/0a/b0/1b/0ab01b56dc38aab735c65224a7c91827.jpg);
+  background-color: #C4CEDA;
   height: 100vh;
-  background-size: cover;
-  background-position: center;
   margin: 0 auto;
-
-}
-
-
-.button {
-    font-size: 0.8rem;
-    font-weight: 400;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 0.25em;
-    text-decoration: none;
-    color: inherit;
-    border: none;
-    background-color: #f48c06;
-    box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
-    padding: 1rem 1.5rem;
-    cursor: pointer;
-    border-radius: 7px;
-}
-
-#home-hidden {
-  visibility: hidden;
-}
-
-.iciiiiii{
-  color: white;
-  font-weight: bold;
 }
