--- a/app/assets/stylesheets/pages/_loader.scss
+++ b/app/assets/stylesheets/pages/_loader.scss
@@ -12,9 +12,9 @@
   position: relative;
   left: 50%;
   top: 50%;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
+  width: 80px;
+  height: 80px;
+  margin: -40px 0 0 -40px;
   border: 3px solid transparent;
   border-top-color: #3498db;
   border-radius: 50%;
@@ -83,34 +83,11 @@
 #loader-wrapper .loader-section {
   position: fixed;
   top: 0;
-  width: 51%;
+  width: 100%;
   height: 100%;
-  background: #222;
+  background-image: url("/assets/home.png");
+  background-size: 375px 812px;
   z-index: 1000;
-}
-
-#loader-wrapper .loader-section.section-left {
-  left: 0;
-}
-
-#loader-wrapper .loader-section.section-right {
-  right: 0;
-}
-
-.loaded #loader-wrapper .loader-section.section-left {
-  -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-      -ms-transform: translateX(-100%);  /* IE 9 */
-          transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
-  -webkit-transition: all 0.3s 0.3s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
-          transition: all 0.3s 0.3s ease-out;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
-}
-
-.loaded #loader-wrapper .loader-section.section-right {
-  -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-      -ms-transform: translateX(100%);  /* IE 9 */
-          transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
-  -webkit-transition: all 0.3s 0.3s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
-          transition: all 0.3s 0.3s ease-out;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
 }
 
 .loaded #loader {
